enabled CascadeType.MERGE, added seatingPlan to ShowWithoutIdDto, changed ShowMapper
